--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   fl_chart: ^0.61.0
   firebase_database: ^10.0.16
+  step_progress_indicator: ^1.0.2
+  liquid_progress_indicator: ^0.4.0
 
 dev_dependencies:
   flutter_test:
