--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_database: ^10.0.16
   step_progress_indicator: ^1.0.2
   liquid_progress_indicator: ^0.4.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
